appmesh/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dj
  labels:
    app: dj
spec:
  ports:
  - port: 9080
    name: http
  selector:
    app: dj
---
apiVersion: v1
kind: Service
metadata:
  name: metal-v1
  labels:
    app: metal
    version: v1
spec:
  ports:
  - port: 9080
    name: http
  selector:
    app: metal
    version: v1
