appmesh/virtualservice_placeholder.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: metal
  labels:
    app: metal
spec:
  ports:
  - port: 9080
    name: http
